# ratings_webapp

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DOCKER.md  DOCKER_QUICKREF.md  DOCKER_SETUP_SUMMARY.md  IMPLEMENTATION_STATUS_ARCHIVE.md  LOOP_MODE_IMPLEMENTATION_PLAN.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  nginx-production.conf
backend/: .dockerignore  .env.docker  .env.example  Cargo.toml  Dockerfile
backend/src/: error.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: activity_logs.rs  auth.rs  categories.rs  media.rs  mod.rs  tests.rs  user.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/utils/: activity_logger.rs  auth.rs  email_service.rs  mod.rs
frontend/: .dockerignore  .env.production  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Modal.tsx  StarRating.tsx
frontend/src/components/admin/: ActivityLog.tsx  AdminManagement.tsx  Categories.tsx  MediaUpload.tsx  TestResults.tsx  Tests.tsx
frontend/src/components/user/: MediaPlayer.tsx  RatingInput.tsx
frontend/src/pages/: AdminDashboard.tsx  AdminLogin.tsx  ChangePassword.tsx  UserTest.tsx
frontend/src/styles/: responsive.css
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  dateFormatters.ts
scripts/: init-admin.sh
